--- a/PublicKey_Crypto_Algorithms_GNUMP/PublicKey_Crypto_Algorithms_GNUMP.vcxproj
+++ b/PublicKey_Crypto_Algorithms_GNUMP/PublicKey_Crypto_Algorithms_GNUMP.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{b58bf03f-0cab-4012-aa9e-82ae535de789}</ProjectGuid>
     <RootNamespace>PublicKeyCryptoAlgorithmsGNUMP</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>PKCrypto_Algorithms</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
