correct project name, c++20 version

--- a/PKCrypto_Algorithms/PKCrypto_Algorithms.vcxproj
+++ b/PKCrypto_Algorithms/PKCrypto_Algorithms.vcxproj
@@ -121,6 +121,8 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalOptions>/wd4146 /wd4244 %(AdditionalOptions)</AdditionalOptions>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <LanguageStandard_C>stdc17</LanguageStandard_C>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
